<resources>
    <string name="app_name">OrderQuik</string>
    <string name="view_shopping_cart">View Shopping Cart</string>
    <string name="view_account">View Account</string>
    <string name="account_login">Account Login</string>
    <string name="guest_login">Guest Login</string>
    <string name="staff_login">Staff Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="staff_id">Staff ID</string>
    <string name="user_reports">User Reports</string>
    <string name="active_orders">Active Orders</string>
    <string name="user_account">User Account</string>
    <string name="useremail">Email:</string>
    <string name="userpassword">Password:</string>
    <string name="reward_points">Reward Points:</string>
    <string name="user_email">user email</string>
    <string name="user_password">user password</string>
    <string name="first_time_user">First time user? Sign up </string>
    <string name="sign_up_here"><u> here</u></string>
    <string name="delivery_address">Delivery Address</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="credit_card_no">Credit Card No.</string>
    <string name="top_rated_dishes">Top Rated Dishes</string>
</resources>
