<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <Button
        android:id="@+id/userLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="login"
        android:text="@string/account_login"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.45" />

    <Button
        android:id="@+id/guestLogin"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:onClick="login"
        android:text="@string/guest_login"
        app:layout_constraintEnd_toEndOf="@+id/userLogin"
        app:layout_constraintStart_toStartOf="@+id/userLogin"
        app:layout_constraintTop_toBottomOf="@+id/userLogin" />

    <Button
        android:id="@+id/staffLogin"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:onClick="login"
        android:text="@string/staff_login"
        app:layout_constraintEnd_toEndOf="@+id/guestLogin"
        app:layout_constraintStart_toStartOf="@+id/guestLogin"
        app:layout_constraintTop_toBottomOf="@+id/guestLogin" />

    <TextView
        android:id="@+id/titleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textColor="@color/purple_500"
        android:textSize="56sp"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toTopOf="@+id/userLogin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/firstTimeUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="40dp"
        android:text="@string/first_time_user"
        android:textSize="16sp"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="@+id/staffLogin"
        app:layout_constraintStart_toStartOf="@+id/staffLogin"
        app:layout_constraintTop_toBottomOf="@+id/staffLogin" />

    <TextView
        android:id="@+id/signUpLink"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:clickable="true"
        android:focusable="true"
        android:onClick="signup"
        android:text="@string/sign_up_here"
        android:textSize="16sp"
        android:textStyle="italic"
        android:textColor="@color/purple_500"
        app:layout_constraintStart_toEndOf="@+id/firstTimeUser"
        app:layout_constraintTop_toBottomOf="@+id/staffLogin" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/midPoint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

</androidx.constraintlayout.widget.ConstraintLayout>