<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:text="@string/email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toTopOf="parent"
        android:textSize="18sp"
        android:padding="6dp" />

    <EditText
        android:id="@+id/textEmail"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:ems="10"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        android:textAlignment="center"
        android:textSize="20sp"
        android:layout_marginStart="5dp"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView"
        app:layout_constraintHorizontal_bias="0.37"
        app:layout_constraintLeft_toRightOf="@+id/textView"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView3" />

    <TextView
        android:text="@string/password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView3"
        app:layout_constraintLeft_toLeftOf="@+id/textView"
        app:layout_constraintRight_toRightOf="@+id/textView"
        android:padding="6dp"
        android:textSize="18sp"
        app:layout_constraintHorizontal_bias="0.0"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <EditText
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:id="@+id/signupPassword"
        app:layout_constraintLeft_toLeftOf="@+id/textEmail"
        app:layout_constraintRight_toRightOf="@+id/textEmail"
        app:layout_constraintHorizontal_bias="0.0"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView3"
        android:inputType="textPassword"
        android:importantForAutofill="no" />

    <TextView
        android:text="@string/confirm_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/confirmPassword"
        app:layout_constraintLeft_toLeftOf="@+id/textView3"
        app:layout_constraintRight_toRightOf="@+id/textView3"
        android:padding="6dp"
        android:textSize="18sp"
        app:layout_constraintHorizontal_bias="0.0"
        android:layout_marginTop="18dp"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <EditText
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:id="@+id/confirmPasswordEditText"
        app:layout_constraintLeft_toLeftOf="@+id/textEmail"
        app:layout_constraintRight_toRightOf="@+id/textEmail"
        app:layout_constraintBottom_toBottomOf="@id/confirmPassword"
        app:layout_constraintHorizontal_bias="0.0"
        android:textAlignment="center"
        android:textSize="20sp"
        android:inputType="textPassword"
        android:importantForAutofill="no" />

    <TextView
        android:text="@string/delivery_address"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/address"
        app:layout_constraintLeft_toLeftOf="@+id/textView3"
        app:layout_constraintRight_toRightOf="@+id/textView3"
        android:padding="6dp"
        android:textSize="18sp"
        app:layout_constraintHorizontal_bias="0.0"
        android:layout_marginTop="18dp"
        app:layout_constraintTop_toBottomOf="@+id/confirmPassword" />

    <EditText
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:id="@+id/addressEdit"
        app:layout_constraintLeft_toLeftOf="@+id/textEmail"
        app:layout_constraintRight_toRightOf="@+id/textEmail"
        app:layout_constraintBottom_toBottomOf="@id/address"
        app:layout_constraintHorizontal_bias="0.0"
        android:textAlignment="center"
        android:textSize="20sp"
        android:inputType="text"
        android:importantForAutofill="no" />

    <TextView
        android:text="@string/credit_card_no"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/credit"
        app:layout_constraintLeft_toLeftOf="@+id/textView3"
        app:layout_constraintRight_toRightOf="@+id/textView3"
        android:padding="6dp"
        android:textSize="18sp"
        app:layout_constraintHorizontal_bias="0.0"
        android:layout_marginTop="18dp"
        app:layout_constraintTop_toBottomOf="@+id/address" />

    <EditText
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:id="@+id/creditEdit"
        app:layout_constraintLeft_toLeftOf="@+id/textEmail"
        app:layout_constraintRight_toRightOf="@+id/textEmail"
        app:layout_constraintBottom_toBottomOf="@id/credit"
        app:layout_constraintHorizontal_bias="0.0"
        android:textAlignment="center"
        android:textSize="20sp"
        android:inputType="number"
        android:importantForAutofill="no" />

</androidx.constraintlayout.widget.ConstraintLayout>